# copilot-service

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: publish.yml  release.yml
docs/: api-contract.md  release.md
examples/: article-ingestion-usage.sh  fake-provider.sh  freeform-request.json  route-topic-request.json
scripts/: install-systemd-user.sh  uninstall-systemd-user.sh
src/copilot_service/: __init__.py  cli.py  client.py  config.py  contracts.py  prompts.py  runner.py  server.py  service.py  terminal.py
src/copilot_service/providers/: __init__.py  base.py  fake.py  shell.py
src/copilot_service/tasks/: __init__.py  freeform.py  route_topic.py
src/copilot_service/utils/: json_extract.py  logging.py  validation.py
tests/: test_cli.py  test_client.py  test_json_extract.py  test_route_topic.py  test_runner.py  test_server.py  test_service.py  test_shell_provider.py  test_terminal.py
